# winforge-web

./: .gitignore  FEATURES_BRAINSTORM.md  FEATURES_SHORTLIST.md  HANDOFF.md  README.md  _integrate.mjs  build.bat  index.html  install.ps1  package-lock.json  package.json  run.bat  tsconfig.json  vite.config.ts  wiki.html  winforge.bat
.claude/: launch.json
.github/workflows/: pages.yml
docs/: PARITY.md  feature-coverage.md  reactor-parity.md
installer/: index.html  package.json  tsconfig.json  vite.config.ts
installer/src/: i18n.ts
src/: App.tsx  main.tsx  pwa.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: awake.rs  commands.rs  lib.rs  main.rs  ops.rs
src/components/: About.tsx  CommandPalette.tsx  ErrorBoundary.tsx  FavoritesRail.tsx  Highlight.tsx  ModuleCard.tsx  ModuleCatalog.tsx  ModuleDetail.tsx  ReactorStub.tsx  ReactorView.tsx  RecentStrip.tsx  SettingsView.tsx  Sidebar.tsx  ThemeToggle.tsx  ToastHost.tsx
src/data/: catalog.ts  catalogHelpers.ts  featureIndex.ts  fuzzy.test.ts  fuzzy.ts  sectionIndex.ts  settingsRegistry.test.ts  settingsRegistry.ts  tweakOps.ts  tweaks.ts
src/i18n/: batchB.ts  en.ts  fileBrowser.ts  index.ts  moduleKeys.baseline.json  shell.ts  (+21 more)
tools/: capture-screens.mjs  commit_history_pdf.py  gen-catalog.mjs  gen-i18n-shell.mjs  gen-parity.mjs  gen-registry-keys.mjs  gen-tweak-ops.mjs  gen-tweaks.mjs  i18n-apply-harvest.mjs  install-hooks.sh  make-portable.ps1  onedrive-backup.sh  ralph-loop-hook.sh
(+425 files in other folders)
