[package]
name = "winforge-web"
version = "0.1.0"
description = "WinForge Web — Tauri v2 desktop shell"
authors = ["codingmachineedge"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "winforge_web_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# by default Tauri runs in production mode; devtools enabled in debug builds
default = []

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "z"
strip = true
# trim binary further: abort on panic (no unwinding tables), tiny alloc error handler
overflow-checks = false
incremental = false
